--- a/trade/src/main/webapp/css/footer.css
+++ b/trade/src/main/webapp/css/footer.css
@@ -1,8 +1,66 @@
 @charset "UTF-8";
 
-footer {
-   color: #000;
-   text-align: center;
-   padding: 10px 0;
-   align-self: flex-end; /* 푸터를 아래쪽으로 정렬 */
-}
+    body {
+      margin: 0;
+      padding: 0;
+      
+    }
+
+    #scrollToTopBtn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #656565;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      padding: 10px 15px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .footer {
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+
+    .footer-info {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      text-align: left;
+      line-height: 1.9rem;
+    }
+
+    .contact-info,
+    .customer-center {
+      flex: 1;
+    }
+
+    .contact-info p,
+    .customer-center p {
+      margin: 0;
+      color: #ccc; /* 추가적인 스타일링 */
+    }
+
+    .logo img {
+      max-width: 50px;
+      border-radius: 0%; /* 로고 이미지를 원 모양으로 깎기 */
+      margin-left: 30px;
+    }
+
+    .customer-center {
+      text-align: right;
+    }
+
+    .copyright {
+      margin-top: 20px;
+      color: #ccc; /* 추가적인 스타일링 */
+    }
+    
+
+    strong {
+    
+	    }
