--- a/trade/src/main/webapp/css/login.css
+++ b/trade/src/main/webapp/css/login.css
@@ -3,9 +3,7 @@
 .b {
     font-family: 'Noto Sans KR', sans-serif;
     margin: 0;
-    display: grid;
-    align-items: center;
-    justify-content: center;
+    
     height: 100vh;
     background-color: #ffffff; /* 흰 배경색 */
 }
@@ -16,7 +14,10 @@
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     width: 400px;
-    margin-top: 150px;
+    margin-top: 300px;
+    margin-right: 150px;
+    margin-bottom: 150px;
+    margin-left: 725px;
 }
 #log {
 	margin-top: 10px;
